# ProjectEuler

./: .gitignore  012_highly_divisible_triangular_number.hs  021_amicable_numbers.hs  023_non-abundant_sums.hs  024_lexicographic_permutations.hs  027_quadratic_primes.hs  028_number_spiral_diagonals.c  029_distinct_powers.hs  030_digit_fifth_powers.hs  031_coin_sums.hs  032_pandigital_products.hs  033_digit_cancelling_fractions.hs  034_digit_factorials.hs  035_circular_primes.cpp  036_double-base_palindromes.hs  037_trunkable_primes.cpp  038_pandigital_multiples.cpp  039_integer_right_triangles.hs  040_champernownes_constant.hs  041_pandigital_prime.hs  042_coded_triangle_numbers.hs  043_sub-string_divisibility.hs  044_pentagon_numbers.hs  045_triangular_pentagonal_and_hexagonal.hs  046_goldbachs_other_conjecture.hs  047_distinct_primes_factors.cpp  050_consecutive_prime_sum.hs  052_permuted_multiples.cpp  053_combinatoric_selections.hs  054_poker_hands.hs  055_lychrel_numbers.hs  056_powerful_digit_sum.hs  057_square_root_convergents.hs  058_spiral_primes.cpp  059_xor_decryption.hs  060_prime_pair_sets.cpp  061_cyclical_figurate_numbers.hs  063_powerful_digit_counts.hs  081_path_sum_two_ways.cpp  082_path_sum_three_ways.cpp  (+12 more)
